samples/_failures_safe/1761656873_6b2059_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_806b2658.c: In function ‘main’:
./samples/SAFE/__tmp_806b2658.c:158:37: error: expected ‘]’ at end of input
  158 |         vector_sum += stack_vector[i
      |                                     ^
      |                                     ]
./samples/SAFE/__tmp_806b2658.c:158:9: error: expected declaration or statement at end of input
  158 |         vector_sum += stack_vector[i
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_806b2658.c:158:9: error: expected declaration or statement at end of input
